--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html {
 
 body {
 	font-size: 16px;
-	background-color: white;
+	background-color: #3F51B5;
 	font-family: "Open Sans", sans-serif;
 }
 
@@ -26,6 +26,9 @@ body {
 
 }
 
+.lists {
+	
+}
 
 .header {
 	background-color: #3F51B5;
@@ -39,6 +42,7 @@ body {
 	height: 20rem;
 	padding-left: 4rem;
 	padding-top: 2rem;
+	background-color: white;
 }
 
 .main li {
