--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@ body {
 	font-size: 16px;
 	background-color: #3F51B5;
 	font-family: "Open Sans", sans-serif;
+		background-color: white;
+
 }
 
 .container {
@@ -59,6 +61,8 @@ body {
 /*	text-transform: uppercase;
 */	letter-spacing: .25rem;
 	text-align: center;
+	float: bottom;
+	position: absolute; bottom: 0; left: 0
 }
 
 .add:hover {
