--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 * {
   margin: 0;
   padding: 0; 
+  font-family: "OpenSans", sans-serif;
+
 }
 
 
@@ -16,7 +18,7 @@ body {
 	font-size: 16px;
 	background-color: #3F51B5;
 	font-family: "Open Sans", sans-serif;
-		background-color: white;
+	background-color: white;
 
 }
 
