--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 * {
   margin: 0;
   padding: 0; 
-  font-family: "OpenSans", sans-serif;
-
+/*  font-family: /*"OpenSans",*/ sans-serif;
+*/
 }
 
 
