--- a/style.css
+++ b/style.css
@@ -22,11 +22,65 @@ body {
 
 }
 
-i {
-	margin-bottom: 2rem;
+
+
+
+/*input {
+	width: 300px;
+	height: 50px;
+	display: inline-block;
+	padding: 0.8em 0;
+	margin: 0.8em auto 0;
+    background-color:rgba(0, 0, 0, 0);
+    color:white;
+    border: none;
+    outline:none;
+	text-align: center;
+	font-family: 'lato';
+	font-size: 2.5rem;
+	border: solid red;
+}
+*/
+
+.cart {
+	padding-top: 2rem;
+}
+
+.item {
+	width: 100%;
+	height: 50px;
+	display: inline-block;
+	padding: 0.8em 0;
+	margin: 0.8em auto 0;
+    background-color:rgba(0, 0, 0, 0);
+    color:white;
+    border: none;
+    outline:none;
+	text-align: center;
+	font-family: 'lato';
+	font-size: 3rem;
+}
+
+.submit {
+	background: white;
+	width: 40px;
+	height: 40px;
+	font-size: 3rem;
+	margin-left: 2rem;
+	color: black;
+	font-weight: 400;
+	border-radius: 100px;
+	text-align: center;
+	padding: 0;
 }
 
 .container {
+	background: linear-gradient(
+      rgba(17, 42, 6, .8), 
+      rgba(17, 42, 6, .8)
+    ), url('../images/green.jpeg');
+    background-size: cover;
+    background-repeat: no-repeat;
 
 }
 
@@ -47,12 +101,6 @@ i {
 
 .main {
 	text-align: center;
-	padding-top: 2rem;
-	padding-bottom: 3rem;
-	background: linear-gradient(
-      rgba(17, 42, 6, .5), 
-      rgba(17, 42, 6, .5)
-    ), url('../images/green.jpeg');
 	color: white;
 	font-family: 'lato';
 
@@ -61,7 +109,10 @@ i {
 .main li {
 	padding-top: 1rem;
 	font-size: 2.2rem;
+}
 
+.add {
+	font-size: 1.75rem;
 }
 
 .add a, .add a:hover {
@@ -80,9 +131,63 @@ i {
 	cursor: pointer;
 }
 
+.striker li {
+	text-decoration: line-through;
+	color: #ff3f80;
+}
+
 strike {
 	color: #ff3f80;
 }
 .listForm {
 	display: none;
 }
+
+/*INSTRUCTIONS*/
+
+
+.overlay {
+	width: 100%;
+	height: 100%;
+	color: black;
+	position: absolute;
+	top: 0;
+	left: 0;
+	margin: 0;
+	z-index: 1000;
+	display: none;
+	font-size: 3rem;
+	font-family: 'lato';
+	text-align: center;
+	padding: 10rem 5rem;
+	background: linear-gradient(
+      rgba(255,255, 255, 1), 
+      rgba(255,255, 255, 1));
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.overlay a {
+	text-decoration: none;
+	color: black;
+}
+
+.overlay h4 {
+	font-size: 2rem;
+	padding-top: 2rem;
+}
+
+@media only screen and (max-width: 700px) {
+.item {
+	font-size: 2.2rem;
+}
+.main li {
+	font-size: 1.8rem;
+}
+}
+
+
+
+
+
+
