--- a/style.css
+++ b/style.css
@@ -7,7 +7,15 @@
 
 html {
   box-sizing: border-box;
+    height: 100%;
+  	width: 100%;
+	background: url(images/greenbeans.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
+
 *, *:before, *:after {
   box-sizing: inherit;
 }
@@ -15,35 +23,19 @@ html {
 body {
 	font-size: 16px;
 	font-family: "lato", sans-serif;
-	background-image: url('images/green.jpeg');
-	background-repeat: no-repeat;
-  	background-size: cover;
-  	background-position: center right;
-
+  	height: 100%;
+  	width: 100%;
 }
-
-
-
-
-/*input {
-	width: 300px;
-	height: 50px;
-	display: inline-block;
-	padding: 0.8em 0;
-	margin: 0.8em auto 0;
-    background-color:rgba(0, 0, 0, 0);
-    color:white;
-    border: none;
-    outline:none;
-	text-align: center;
-	font-family: 'lato';
-	font-size: 2.5rem;
-	border: solid red;
-}
-*/
 
 .cart {
 	padding-top: 2rem;
+}
+
+.question {
+	text-align: center;
+	position: fixed; 
+	bottom: 2rem; 
+	margin-left: 50%;
 }
 
 .item {
@@ -75,20 +67,14 @@ body {
 }
 
 .container {
-	background: linear-gradient(
-      rgba(17, 42, 6, .8), 
-      rgba(17, 42, 6, .8)
-    ), url('../images/green.jpeg');
-    background-size: cover;
-    background-repeat: no-repeat;
-
+	height: 100%;
+	width: 100%;
 }
 
-.header, .main, .add {
-
-}
 
 .lists {
+	text-align: left;
+	padding-left: 40%;
 	
 }
 
@@ -109,6 +95,16 @@ body {
 .main li {
 	padding-top: 1rem;
 	font-size: 2.2rem;
+	list-style-type: square;
+	margin-left: 1rem;
+
+}
+
+.dope li:before {    
+font-family: 'FontAwesome';
+content: '\f096';
+margin:0 1rem 0 -5px;
+color: white;
 }
 
 .add {
@@ -131,14 +127,12 @@ body {
 	cursor: pointer;
 }
 
-.striker li {
+.striker {
 	text-decoration: line-through;
 	color: #ff3f80;
 }
 
-strike {
-	color: #ff3f80;
-}
+
 .listForm {
 	display: none;
 }
@@ -177,7 +171,19 @@ strike {
 	padding-top: 2rem;
 }
 
+.arrow {
+	margin: 20rem 0;
+	text-align: center;
+}
+
+.arrow li {
+	text-align: left;
+	padding-left: 15rem;
+	list-style: none;
+}
+
 @media only screen and (max-width: 700px) {
+
 .item {
 	font-size: 2.2rem;
 }
